--- a/package.json
+++ b/package.json
@@ -4,18 +4,27 @@
   "description": "Falcor introduction",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack && node .",
+    "test": "ava test/index.test.js"
   },
-  "author": "David Cahill",
+  "author": "Arcadia Group",
   "license": "MIT",
   "dependencies": {
+    "babel": "5.8.29",
     "falcor": "0.1.14",
     "falcor-hapi": "0.0.2",
     "falcor-http-datasource": "0.1.2",
     "falcor-router": "0.2.11",
     "hapi": "11.1.1",
     "inert": "3.2.0",
-    "lodash": "3.10.1"
+    "lodash": "3.10.1",
+    "ramda": "^0.18.0"
+  },
+  "devDependencies": {
+    "ava": "0.6.0",
+    "babel-core": "5.8.29",
+    "babel-loader": "5.3.2",
+    "babel-runtime": "5.8.29",
+    "webpack": "1.12.9"
   }
 }
